# Dietolog_Advisor

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 6d8d67b1f4d5_ensure_core_tables_in_public_schema.py  8c293d0b996f_initial.py  c4c8b0d7d3ab_ensure_model_registry_exists.py  e2a6c3b4d901_ensure_user_support_tables_exist.py  f0d9d8f7c1a2_ensure_core_tables_exist.py
app/: config.py  logging.py  main.py
app/api/: deps.py
app/api/routes/: admin.py  health.py  telegram.py
app/bot/: keyboards.py  runner.py  states.py  webhook.py
app/bot/handlers/: admin.py  common.py  meals.py  menu.py  onboarding.py  reminders.py
app/db/: base.py  enums.py  health.py  models.py  session.py
app/i18n/: __init__.py  ru.json  uz_cyrl.json  uz_latn.json
app/integrations/ai/: __init__.py  base.py  orchestrator.py  providers.py
app/prompts/: meal_finalize.txt  meal_plan.txt  meal_vision.txt  nutrition_chat.txt  nutrition_guard.txt
app/repositories/: __init__.py  admin.py  meals.py  reminders.py  users.py
app/schemas/: __init__.py  ai.py
app/services/: __init__.py  access.py  deletion.py  meal_analysis.py  meal_plan.py  model_registry.py  nutrition.py  nutrition_chat.py  onboarding.py  reminders.py  reports.py  topic_guard.py
app/templates/: admin_dashboard.html
app/utils/: __init__.py  json_tools.py  prompts.py
