[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "professional-dietologist"
version = "0.1.0"
description = "Production-like Telegram dietology bot with FastAPI, aiogram, PostgreSQL, and provider-level AI fallback."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.7,<4",
  "alembic>=1.13,<2",
  "apscheduler>=3.10,<4",
  "asyncpg>=0.29,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4",
  "psycopg[binary]>=3.1,<4",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "python-dotenv>=1.0,<2",
  "python-multipart>=0.0.9,<1",
  "SQLAlchemy>=2.0.32,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20,<1",
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.6,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["templates/*.html", "prompts/*.txt", "i18n/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
